name:                htest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/htest#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ld-options: -static -pthread
  ghc-options: -fPIC
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-extensions:    ForeignFunctionInterface
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
